Some UI fixes (sizes, spacings, wording)

--- a/src/app/pages/main/main-hobbies/main-hobbies.component.scss
+++ b/src/app/pages/main/main-hobbies/main-hobbies.component.scss
@@ -25,7 +25,7 @@
 .favorites-list {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: var(--spe-spacing-100);
+  gap: var(--spe-spacing-200);
 
   @include mixins.mobile-only {
     grid-template-columns: repeat(1, 1fr);
